src/components/developer/Developer.module.scss
@import '@/styles/variables.scss';


.developer {
  margin-top: 64px;
  max-width: 880px;


  @include lg {
    margin-top: 32px;
  }

  &__title {
    text-align: center;
    @include title;
    color: $light;
    margin-bottom: 64px;

    @include lg {
      margin-bottom: 32px;
    }
  }

  &__grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 8px;
    margin-bottom: 64px;


    @include lg {
      grid-template-columns: 1fr;
      margin-bottom: 48px;

    }

    &_open {
      display: grid;
      grid-template-columns: repeat(2, 1fr);
      gap: 8px;
    }

    &_cell {
      border-radius: 1000px;
      padding: 24px;
      background-color: $grey5;
      display: flex;
      gap: 12px;
      align-items: center;
      color: $grey1;
      @include text;
      @include letterMore;

      @include lg {
        justify-content: center;
        padding: 16px;
        font-size: 15px;
        line-height: 16px;
      }

      svg {
        path {
          fill: $grey1;
        }

        @include lg {
          width: 16px;
          height: 16px;
        }
      }

      &_closed {
        color: $disruptive;

        svg {
          path {
            fill: $disruptive;
          }
        }
      }

      &_open {
        color: $primary;

        svg {
          path {
            fill: $primary;
          }
        }
      }

      &_full {
        grid-column: 1/-1;
      }

      &_btn {
        background-color: $light;
        border-radius: 1000px;
        padding: 24px;
        text-align: center;
        @include text;
        color: $dark;
        @include transitionOPacity;
        font-weight: 600;

        @include lg {
          padding: 16px;
          font-size: 15px;
          line-height: 16px;
        }
      }

    }

  }

  &__subtitle {
    @include subtitle;
    color: $light;
    margin-bottom: 40px;

    @include lg {
      margin-bottom: 16px;
      font-size: 24px;
      line-height: 32px;
    }
  }

  &__desc {
    color: $grey2;

    a {
      text-decoration: underline;
      color: $grey0;
    }

    br {
      content: "A" !important;
      display: block !important;
      margin-bottom: 10px !important;
    }

    h2,
    h3,
    h4,
    h5,
    h6 {
      color: $light;
      @include text;
      margin-bottom: 16px;
      margin-top: 16px;
    }

    li:has(code) {
      padding-left: 0;

      &::before {
        display: none;
      }
    }

    pre {
      @include text;
      padding: 16px;
      background-color: $grey2;
      color: $grey5;
      border-radius: 16px;
      margin-top: 10px;
      margin-bottom: 10px;
      // overflow-x: scroll;
      white-space: pre-wrap;
      /* Since CSS 2.1 */
      white-space: -moz-pre-wrap;
      /* Mozilla, since 1999 */
      white-space: -pre-wrap;
      /* Opera 4-6 */
      white-space: -o-pre-wrap;
      /* Opera 7 */
      word-wrap: break-word;
    }

    p {
      @include text;
      @include letterMore;
      margin-bottom: 16px;
      margin-top: 10px;

      strong {
        padding-left: 4px;
        padding-right: 4px;
      }

    }
    strong {
      display: inline-block;
    }

    ul,
    ol {
      li {
        @include text;
        color: $grey2;
        @include letterMore;
        margin-bottom: 6px;
        strong {
          padding-left: 4px;
          padding-right: 4px;
        }
      }
    }

    ol {
      list-style-position: inside;
      li {

      }
    }
    
    ul {
      li {
        position: relative;
        padding-left: 25px;
        &::before {
          position: absolute;
          content: '';
          width: 2px;
          height: 2px;
          border-radius: 1000px;
          background-color: $grey2;
          top: 12px;
          left: 12px;
        }
      }
    }
  }

  &__btn {
    display: block;
    margin-left: auto;
    margin-top: 56px;
    background-color: $light;
    border-radius: 1000px;
    padding: 12px 24px;
    text-align: center;
    @include text;
    color: $dark;
    @include transitionOPacity;
    font-weight: 600;
    min-width: 200px;
    max-width: 200px;

    @include lg {
      max-width: unset;
      width: 100%;
      margin-top: 32px;
    }
  }

  &__follow {
    margin-top: 96px;
    margin-bottom: 96px;

    @include lg {
      margin-top: 32px;
      margin-bottom: 56px;
    }

    ;
  }

}

